--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-sdk android:minSdkVersion="11" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".Activities.GalDroidApp">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".Activities.GalDroidApp" android:allowClearUserData="true" android:hardwareAccelerated="true" android:allowBackup="true">
         <activity android:label="@string/app_name" android:name=".Activities.GalleryListingActivitiy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
