--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="de.raptor2101.GalDroid"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName=" 0.2.1" android:versionCode="3">
     <uses-sdk android:minSdkVersion="11" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
