--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="de.raptor2101.GalDroid"
-      android:versionName=" 0.2.1" android:versionCode="3">
+      android:versionName=" 0.2.2" android:versionCode="4">
     <uses-sdk android:minSdkVersion="11" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -13,7 +13,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.EditGalleryActivity" android:label="@string/app_name"/>
-        <activity android:name=".Activities.GridViewActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"/>
-        <activity android:name=".Activities.ImageViewActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"/>
+        <activity android:name=".Activities.GridViewActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" android:configChanges="keyboardHidden|orientation"/>
+        <activity android:name=".Activities.ImageViewActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" android:configChanges="keyboardHidden|orientation"/>
     </application>
 </manifest>
