CHG: MetaData Changes

--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="/media/Workspace/eclipse_workspace/Libraries/httpcomponents-client-4.1.1/lib/httpclient-cache-4.1.1.jar"/>
 	<classpathentry kind="lib" path="/media/Workspace/eclipse_workspace/Libraries/httpcomponents-client-4.1.1/lib/httpcore-4.1.jar"/>
 	<classpathentry kind="lib" path="/media/Workspace/eclipse_workspace/Libraries/httpcomponents-client-4.1.1/lib/httpmime-4.1.1.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
