--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.EditGalleryActivity" android:label="@string/app_name"/>
-        <activity android:name=".Activities.GridViewActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" android:configChanges="keyboardHidden|orientation"/>
-        <activity android:name=".Activities.ImageViewActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" android:configChanges="keyboardHidden|orientation"/>
+        <activity android:name=".Activities.GridViewActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Holo" android:configChanges="keyboardHidden|orientation"/>
+        <activity android:name=".Activities.ImageViewActivity" android:label="@string/app_name" android:theme="@style/transparentHolo" android:configChanges="keyboardHidden|orientation"/>
     </application>
 </manifest>
